--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -68,7 +68,7 @@ jobs:
       - uses: actions/upload-artifact@main
 
   test:
-
+    needs: build
     runs-on: ubuntu-latest
 
     strategy:
@@ -78,6 +78,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/download-artifact@main
+      with: 
+        name: webpack artifacts
+        path: public
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
