--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,7 +22,11 @@
 
 #     steps:
 #     - uses: actions/checkout@v2
-#     - name: Use Node.js ${{ matrix.node-version }}
+    - uses: actions/download-artifact@main
+      with:
+        name: webpack artifacts
+        path: public
+    - name: npm install, and test
 #       uses: actions/setup-node@v2
 #       with:
 #         node-version: ${{ matrix.node-version }}
